<resources>
    <string name="app_name">CovidMonitor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continent_name">Name</string>
    <string name="cases">Cases</string>
    <string name="today_cases">Today cases</string>
    <string name="deathes">Deathes</string>
    <string name="today_deathes">Today deathes</string>
    <string name="recovered">Recovered</string>
    <string name="today_recovered">Today recovered</string>
</resources>